# neutron-fwaas

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .pylintrc  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.rst  TESTING.rst  bindep.txt  lower-constraints.txt  openstack-common.conf  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
devstack/: README.rst  plugin.sh  settings
devstack/lib/: l2_agent  l3_agent
doc/: requirements.txt
doc/source/: conf.py  contributing.rst  index.rst  installation.rst
doc/source/configuration/: drivers_comparison.rst  fwaas_driver.rst  index.rst  neutron_fwaas.rst  policy-sample.rst  policy.rst
doc/source/configuration/samples/: fwaas_driver.rst  neutron_fwaas.rst
doc/source/contributor/: contributing.rst  fwaas_v2.rst  index.rst  modules.rst
doc/source/contributor/internals/: index.rst  l2_agent.rst  l3_agent.rst  ovn.rst
doc/source/install/: index.rst
doc/source/user/: index.rst
etc/: README.txt  fwaas_driver.ini
etc/neutron/policy.d/: neutron-fwaas.json
etc/neutron/rootwrap.d/: fwaas-privsep.filters
etc/oslo-config-generator/: fwaas_driver.ini  neutron_fwaas.conf
etc/oslo-policy-generator/: policy.conf
neutron-fwaas/locale/: neutron-fwaas.pot
neutron_fwaas/: _i18n.py  opts.py  version.py
neutron_fwaas.egg-info/: PKG-INFO  top_level.txt
neutron_fwaas/cmd/: v1_to_v2_db_migration.py
neutron_fwaas/cmd/eventlet/agents/: fw.py
neutron_fwaas/cmd/upgrade_checks/: checks.py
neutron_fwaas/common/: exceptions.py  fwaas_constants.py  netlink_constants.py  resources.py  utils.py
neutron_fwaas/db/cisco/: cisco_fwaas_db.py
neutron_fwaas/db/firewall/: firewall_db.py  firewall_router_insertion_db.py
neutron_fwaas/db/firewall/v2/: firewall_db_v2.py  models.py
neutron_fwaas/db/migration/alembic_migrations/: env.py
neutron_fwaas/db/models/: head.py
neutron_fwaas/extensions/: firewall.py  firewall_v2.py  firewall_v2_stdattrs.py  firewallrouterinsertion.py
neutron_fwaas/extensions/cisco/: csr_firewall_insertion.py
neutron_fwaas/locale/: neutron_fwaas.pot
neutron_fwaas/locale/en_GB/LC_MESSAGES/: neutron_fwaas.po
neutron_fwaas/objects/: __init__.py  firewall_v2.py
neutron_fwaas/openstack/common/: _i18n.py  eventlet_backdoor.py  lockutils.py  log.py  loopingcall.py  periodic_task.py  policy.py  processutils.py  service.py  systemd.py  threadgroup.py  versionutils.py
neutron_fwaas/openstack/common/cache/: cache.py
neutron_fwaas/openstack/common/fixture/: lockutils.py
neutron_fwaas/openstack/common/middleware/: catch_errors.py  request_id.py
neutron_fwaas/policies/: __init__.py  firewall.py  firewall_group.py  firewall_policy.py  firewall_rule.py
neutron_fwaas/privileged/: __init__.py  netlink_constants.py  netlink_lib.py  utils.py
neutron_fwaas/privileged/netfilter_log/: libnetfilter_log.py
neutron_fwaas/privileged/tests/functional/: dummy.py  utils.py
neutron_fwaas/services/firewall/: __init__.py  fwaas_plugin.py  fwaas_plugin_v2.py
neutron_fwaas/services/firewall/agents/: firewall_agent_api.py  firewall_service.py
neutron_fwaas/services/firewall/drivers/: conntrack_base.py  fwaas_base.py  fwaas_base_v2.py
neutron_fwaas/services/firewall/freescale/: README.rst  fwaas_plugin.py
neutron_fwaas/services/firewall/service_drivers/: driver_api.py
neutron_fwaas/services/logapi/: constants.py  exceptions.py  fwg_validate.py
neutron_fwaas/services/logapi/common/: fwg_callback.py  log_db_api.py  port_callback.py
neutron_fwaas/services/logapi/rpc/: log_server.py
neutron_fwaas/tests/: base.py
neutron_fwaas/tests/contrib/: README  functional-testing.filters  gate_hook.sh  gate_hook_tempest.sh  post_test_hook.sh
neutron_fwaas/tests/contrib/hooks/: api_extensions-base  api_extensions-legacy  api_extensions-v2
neutron_fwaas/tests/fullstack/: README  base.py  test_l3_agent.py
neutron_fwaas/tests/fullstack/resources/: client.py  config.py  environment.py  machine.py  process.py
neutron_fwaas/tests/functional/: test_fwaas_driver.py
neutron_fwaas/tests/functional/db/: test_migrations.py
neutron_fwaas/tests/functional/privileged/: test_dummy.py  test_netlink_lib.py  test_utils.py
neutron_fwaas/tests/tempest_plugin/: plugin.py
neutron_fwaas/tests/unit/: test_extension_firewall.py
playbooks/neutron-fwaas-fullstack/: run.yaml
releasenotes/notes/: add-missing-pk-firewall_group_associations_v2-3fddb21b3a19b598.yaml  adding-new-tables-for-future-consumption-ffd537c1f82e2e01.yaml  auto-association-default-firewall-group-7e9faf1afca1df85.yaml  bug-1702242-c917c832ac2fa4e1.yaml  bug-1746404-493a66faac333403.yaml  bug-1799358-360c6ab27a32e0ac.yaml  cisco-fwaas-driver-move-8f46325d13c93543.yaml  coexistence-between-sg-and-fwg-1f77a755539a9463.yaml  config-file-generation-265c5256668a26bf.yaml  deprecate-agent_version-388041ad3608e43a.yaml  deprecate-neutron-fwaas-as-stadium-project-934d6acb3e824249.yaml  drop-py39-fbdd3fd504153a18.yaml  drop-python-2-7-73d3113c69d724c1.yaml  enable-quotas-a3d0a21743bb1985.yaml  fix-fwaas-log-duplication-85159dc33e43f095.yaml  fwaas-config-9c780ccfb0e7887f.yaml  fwaas-v2-logging-79cbaa43ff17f47f.yaml  fwaas_v2-374471c215af0ca0.yaml  mcafee-fwaas-driver-removal-8915271e5d4288cf.yaml  ovs-firewall-driver-c347ea0a560b7e38.yaml  remove-agent_version-5c2de6d326e4b290.yaml  remove-v1-to-v2-migration-4c5b7f60c6843739.yaml  remove_fwaas_v1-15c6e19484f46d1b.yaml  s-rbac-api-policies-added-4dc1db4ff91fbbed.yaml  support-l3-firewall-for-ovn-driver-3f5632ad13cf35fd.yaml  validation_if_port_is_supported-639d0df705eb67f9.yaml  varmour-fwaas-driver-removal-f7aa304a4544134a.yaml  vyatta-fwaas-driver-removal-e38e6ecde5105084.yaml
releasenotes/source/: conf.py  index.rst
roles/configure_functional_tests/: README.rst
roles/configure_functional_tests/defaults/: main.yaml
roles/configure_functional_tests/tasks/: main.yaml
tools/: check_unit_test_structure.sh  configure_for_func_testing.sh  configure_for_fwaas_func_testing.sh  deploy_rootwrap.sh  subunit-trace.py  tox_install.sh
(+167 files in other folders)
