[metadata]
name = neutron-fwaas
summary = OpenStack Networking FWaaS
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/neutron-fwaas/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    neutron_fwaas

data_files =
    etc/neutron/rootwrap.d =
        etc/neutron/rootwrap.d/fwaas-privsep.filters

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
firewall_drivers =
    # These are for backwards compat with Juno firewall service provider
    # configuration values
    neutron.services.firewall.drivers.linux.iptables_fwaas.IptablesFwaasDriver = neutron_fwaas.services.firewall.drivers.linux.iptables_fwaas:IptablesFwaasDriver
    iptables = neutron_fwaas.services.firewall.drivers.linux.iptables_fwaas:IptablesFwaasDriver
    iptables_v2 = neutron_fwaas.services.firewall.drivers.linux.iptables_fwaas_v2:IptablesFwaasDriver
neutron.service_plugins =
    firewall = neutron_fwaas.services.firewall.fwaas_plugin:FirewallPlugin
    firewall_v2 = neutron_fwaas.services.firewall.fwaas_plugin_v2:FirewallPluginV2
    neutron.services.firewall.fwaas_plugin.FirewallPlugin = neutron_fwaas.services.firewall.fwaas_plugin:FirewallPlugin

neutron.db.alembic_migrations =
    neutron-fwaas = neutron_fwaas.db.migration:alembic_migrations
tempest.test_plugins =
    neutron-fwaas = neutron_fwaas.tests.tempest_plugin.plugin:NeutronFWaaSPlugin
oslo.config.opts =
    firewall.agent = neutron_fwaas.opts:list_agent_opts
neutron.agent.l3.extensions =
    fwaas = neutron_fwaas.services.firewall.agents.l3reference.firewall_l3_agent:L3WithFWaaS
    fwaas_v2 = neutron_fwaas.services.firewall.agents.l3reference.firewall_l3_agent_v2:L3WithFWaaS

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = neutron_fwaas/locale/neutron_fwaas.pot

[compile_catalog]
directory = neutron_fwaas/locale
domain = neutron_fwaas

[update_catalog]
domain = neutron_fwaas
output_dir = neutron_fwaas/locale
input_file = neutron_fwaas/locale/neutron_fwaas.pot

[wheel]
universal = 1

[pbr]
autodoc_index_modules = True
warnerrors = True
