[metadata]
name = neutron-fwaas
summary = OpenStack Networking FWaaS
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/neutron-fwaas/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    neutron_fwaas

data_files =
    etc/neutron/rootwrap.d =
        etc/neutron/rootwrap.d/fwaas-privsep.filters

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
firewall_drivers =
    iptables_v2 = neutron_fwaas.services.firewall.service_drivers.agents.drivers.linux.iptables_fwaas_v2:IptablesFwaasDriver
neutron.service_plugins =
    firewall_v2 = neutron_fwaas.services.firewall.fwaas_plugin_v2:FirewallPluginV2

neutron.db.alembic_migrations =
    neutron-fwaas = neutron_fwaas.db.migration:alembic_migrations
tempest.test_plugins =
    neutron-fwaas = neutron_fwaas.tests.tempest_plugin.plugin:NeutronFWaaSPlugin
oslo.config.opts =
    neutron.fwaas = neutron_fwaas.opts:list_opts
    firewall.agent = neutron_fwaas.opts:list_agent_opts
oslo.policy.policies =
    neutron-fwaas = neutron_fwaas.policies:list_rules
neutron.policies =
    neutron-fwaas = neutron_fwaas.policies:list_rules
neutron.agent.l2.extensions =
    fwaas_v2 = neutron_fwaas.services.firewall.service_drivers.agents.l2.fwaas_v2:FWaaSV2AgentExtension
neutron.agent.l2.firewall_drivers =
    noop = neutron_fwaas.services.firewall.service_drivers.agents.drivers.linux.l2.noop.noop_driver:NoopFirewallL2Driver
    ovs = neutron_fwaas.services.firewall.service_drivers.agents.drivers.linux.l2.openvswitch_firewall.firewall:OVSFirewallDriver
neutron.agent.l3.extensions =
    fwaas_v2 = neutron_fwaas.services.firewall.service_drivers.agents.l3reference.firewall_l3_agent_v2:L3WithFWaaS
    fwaas_v2_log = neutron_fwaas.services.logapi.agents.l3.fwg_log:FWaaSL3LoggingExtension
neutron.agent.l3.firewall_drivers =
    conntrack = neutron_fwaas.services.firewall.service_drivers.agents.drivers.linux.legacy_conntrack:ConntrackLegacy
    netlink_conntrack = neutron_fwaas.services.firewall.service_drivers.agents.drivers.linux.netlink_conntrack:ConntrackNetlink
neutron.services.logapi.drivers =
    fwaas_v2_log = neutron_fwaas.services.logapi.agents.drivers.iptables.log:IptablesLoggingDriver
console_scripts =
    neutron-fwaas-migrate-v1-to-v2 = neutron_fwaas.cmd.v1_to_v2_db_migration:main
neutron.status.upgrade.checks =
    neutron_fwaas = neutron_fwaas.cmd.upgrade_checks.checks:Checks

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = neutron_fwaas/locale/neutron_fwaas.pot

[compile_catalog]
directory = neutron_fwaas/locale
domain = neutron_fwaas

[update_catalog]
domain = neutron_fwaas
output_dir = neutron_fwaas/locale
input_file = neutron_fwaas/locale/neutron_fwaas.pot

[wheel]
universal = 1
